[tool.poetry]
name = "mlpp-features"
version = "0.6.0"
description = "Define, track, share, and discover features for ML-based postprocessing of weather forecasts."
authors = ["Daniele Nerini"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"  # required by scipy
scipy = "^1.12.0"
xarray = "^2024.2.0"
dask = "^2024.2.0"
zarr = "^2.17.0"
bottleneck = "^1.3.7"
pyproj = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
