[tool.poetry]
name = "mlpp-features"
version = "0.6.1"
description = "Define, track, share, and discover features for ML-based postprocessing of weather forecasts."
authors = ["Daniele Nerini"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"  # required by scipy
scipy = "*"
pandas = "<2.0.0"
xarray = ">=2022.6.0,<2022.12.0"
pyproj = "*"
bottleneck = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
isort = "*"
zarr = "<2.13.5"
dask = "*"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
